<resources>
    <string name="app_name">App_UT2_04</string>
    <string name="nombre">Nombre y apellidos</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="destino">¿A que destino quiere ir?</string>
    <string name="penisula">Costa peninsular (600€)</string>
    <string name="isla">Costa insular(900€)</string>
    <string name="interior">Turismo de interior (520€)</string>
    <string name="iva">I.V.A.</string>
    <string name="mostrar">MOSTRAR</string>
    <string name="precio_final">Precio final</string>
</resources>