<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nombreYApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/presupuesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/presupuesto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreYApellidos" />

    <TextView
        android:id="@+id/textViewDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presupuesto" />

    <RadioGroup
        android:id="@+id/opcionViaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/opcion_peninsula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDestino">

        <RadioButton
            android:id="@+id/opcion_peninsula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/penisula" />

        <RadioButton
            android:id="@+id/opcion_islas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isla" />

        <RadioButton
            android:id="@+id/opcion_interior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interior" />
    </RadioGroup>


    <Switch
        android:id="@+id/switch_iva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opcionViaje" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_iva" />

    <TextView
        android:id="@+id/precio_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precio_final"
        app:srcCompat="@drawable/costa_peninsular" />

</androidx.constraintlayout.widget.ConstraintLayout>